compute the cohen Kappa score

--- a/TP_bots_template.ipynb
+++ b/TP_bots_template.ipynb
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "242398c5-d3ae-472f-99e8-ac86be7897c2",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,6 @@
     "print(f\"Total des Bot Actors sur GitHub : {num_bots}\")\n",
     "print(f\"Total des Comptes Utilisateurs : {num_users}\\n\")\n",
     "\n",
-    "# Afficher les 10 premières lignes du DataFrame final\n",
     "print(\" Aperçu du fichier mis à jour :\")\n",
     "merged_df[merged_df[\"app\"]==True] "
    ]
@@ -1628,13 +1627,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "97f4dd46-d8a8-492b-91d1-5f68d0e88a89",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Aperçu du fichier mis à jour :\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>contributor</th>\n",
+       "      <th>bothunter_type</th>\n",
+       "      <th>app</th>\n",
+       "      <th>bimbas_type</th>\n",
+       "      <th>confidence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>github-actions[bot]</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>0.145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>github-advanced-security[bot]</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>0.703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>hackmd-hub[bot]</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>0.751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>lumberbot-app[bot]</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>0.912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>mergify[bot]</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>0.786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>transifex-integration[bot]</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>0.535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>welcome[bot]</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Bot</td>\n",
+       "      <td>0.727</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      contributor bothunter_type   app bimbas_type  confidence\n",
+       "15            github-actions[bot]            Bot  True         Bot       0.145\n",
+       "16  github-advanced-security[bot]            Bot  True         Bot       0.703\n",
+       "17                hackmd-hub[bot]            Bot  True         Bot       0.751\n",
+       "23             lumberbot-app[bot]            Bot  True         Bot       0.912\n",
+       "25                   mergify[bot]            Bot  True       Human       0.786\n",
+       "36     transifex-integration[bot]            Bot  True         Bot       0.535\n",
+       "38                   welcome[bot]            Bot  True         Bot       0.727"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Merge the predictions provided by BIMBAS to the resultant dataset of Section 3. This final DataFrame should have the following columns - \n",
-    "# contributor, bothunter_type, user_type, bimbas_type, and confidence."
+    "# contributor, bothunter_type, user_type, bimbas_type, and confidence.\n",
+    "\n",
+    "merged_df_bim =pd.merge(merged_df, bimbas_predict, on='contributor')\n",
+    "\n",
+    "# Save the updated DataFrame back to CSV\n",
+    "updated_csv_file2 = \"updated_sample2.csv\"\n",
+    "merged_df_bim.to_csv(updated_csv_file2, index=False)\n",
+    "\n",
+    "print(\" Aperçu du fichier mis à jour :\")\n",
+    "merged_df_bim[merged_df_bim[\"app\"]==True] "
    ]
   },
   {
@@ -1648,13 +1768,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "id": "1040a69f-25cb-467a-9afd-6f32f6ae2a6e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cohen Kappa Score=  0.6\n"
+     ]
+    }
+   ],
    "source": [
     "# Hint: use the cohen_kappa_score library\n",
-    "# YOUR CODE BELOW"
+    "# YOUR CODE BELOW\n",
+    "ck = cohen_kappa_score(merged_df_bim.bothunter_type, merged_df_bim.bimbas_type)\n",
+    "\n",
+    "print(f'Cohen Kappa Score= ',ck)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "930c39dd",
+   "metadata": {},
+   "source": [
+    " ##Interpretation \n",
+    " \n",
+    " Cohen's Kappa score is 0.6, indicating a moderate to substantial level of agreement between the two bot detection methods.\n",
+    "\n",
+    " A score of 0.6 means that around 60% of classifications are aligned, while 40% show discrepancies.\n",
+    " So there's good agreement between the GitHub API's classification of bots and BIMBAS, but there are some differences.\n",
+    "In fact, GitHub classifies a user as a \"Bot\" according to its official status, whereas BIMBAS uses a model based on the behavior of the user.\n"
    ]
   },
   {
